--- a/build-project.gradle
+++ b/build-project.gradle
@@ -4,7 +4,7 @@ apply plugin: 'java'
 apply plugin: "com.github.johnrengelman.shadow"
 
 group project_group_id
-version '1.0'
+version '1.1'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -14,9 +14,9 @@ targetCompatibility = 1.8
 
 jar {
     baseName = 'classes-duplication-check'
-    version = '1.0'
+    version = project.version
     manifest {
-        attributes  'Manifest-Version': 1.0,
+        attributes  'Manifest-Version': project.version,
                     'Main-Class': 'com.github.shepherdviolet.classesduplicationcheck.Main'
     }
 }
