--- a/gradle-project.properties
+++ b/gradle-project.properties
@@ -1,1 +1,2 @@
-version_thistle=21.1.0
+# local repository path | \u672C\u5730\u4ED3\u5E93\u8DEF\u5F84
+repository_localRepositoryPath=file:C:/m2repository/repository
